--- a/desktop/src/kibana/apps/new_visualize/wizard/step_2.html
+++ b/desktop/src/kibana/apps/new_visualize/wizard/step_2.html
@@ -5,8 +5,8 @@
 
 <ul class="list-group list-group-menu">
   <a class="list-group-item list-group-menu-item"
-  	ng-repeat="type in visTypeDefs"
-  	ng-href="{{ typeUrl(type) }}">
+  	ng-repeat="type in visTypes"
+  	ng-href="{{ visTypeUrl(type) }}">
     <li>
       <i ng-class="type.icon"></i>{{type.name}}
     </li>
