--- a/desktop/src/kibana/apps/visualize/editor.html
+++ b/desktop/src/kibana/apps/visualize/editor.html
@@ -70,7 +70,7 @@
               <li class="sidebar-item">
                 <button
                 ng-click="fetch()"
-                ng-if="vis.dirty"
+                ng-if="stateDirty"
                 ng-disabled="httpActive.length || visualizeEditor.$invalid"
                 class="sidebar-item-button success">
                 Apply
