--- a/desktop/src/kibana/apps/new_visualize/editor/panels/save.html
+++ b/desktop/src/kibana/apps/new_visualize/editor/panels/save.html
@@ -1,11 +1,11 @@
 <form role="form" ng-submit="conf.doSave()">
   <div class="form-group">
     <label for="visTitle">Title</label>
-    <input class="form-control" type="text" name="visTitle" ng-model="conf.vis.title" required>
+    <input class="form-control" type="text" name="visTitle" ng-model="conf.savedVis.title" required>
   </div>
   <div class="form-group">
     <label for="visDescription">Description</label>
-    <textarea class="form-control" name="visDescription" ng-model="conf.vis.description" placeholder=""></textarea>
+    <textarea class="form-control" name="visDescription" ng-model="conf.savedVis.description" placeholder=""></textarea>
   </div>
 
   <button type="submit" class="btn btn-primary">Save</button>
