you can now reset vis state, added spacing between groups

--- a/desktop/src/kibana/apps/new_visualize/editor/editor.html
+++ b/desktop/src/kibana/apps/new_visualize/editor/editor.html
@@ -62,7 +62,8 @@
       ng-if="!appEmbedded"
       vis="editableVis"
       saved-vis="savedVis"
-      apply="stageEditableVis(); fetch();">
+      apply="stageEditableVis(); fetch();"
+      reset="resetEditableVis();">
     </vis-editor-sidebar>
 
     <div class="vis-editor-canvas">
