--- a/desktop/src/kibana/apps/new_visualize/editor/sidebar.html
+++ b/desktop/src/kibana/apps/new_visualize/editor/sidebar.html
@@ -4,37 +4,41 @@
       <ul class="list-unstyled">
 
         <!-- metrics -->
-        <li ng-if="vis.type.schemas.metrics" class="sidebar-item">
-          <vis-editor-agg-group
-            vis="vis"
-            saved-vis="savedVis"
-            schemas="vis.type.schemas.metrics"
-            group="vis.aggs.bySchemaGroup.metrics"
-            group-name="'metrics'"
-            >
-          </vis-editor-agg-group>
-        </li>
+        <vis-editor-agg-group
+          ng-if="vis.type.schemas.metrics"
+          vis="vis"
+          saved-vis="savedVis"
+          schemas="vis.type.schemas.metrics"
+          group="vis.aggs.bySchemaGroup.metrics"
+          group-name="'metrics'"
+          >
+        </vis-editor-agg-group>
 
         <!-- buckets -->
-        <li ng-if="vis.type.schemas.buckets" class="sidebar-item">
-          <vis-editor-agg-group
-            vis="vis"
-            saved-vis="savedVis"
-            schemas="vis.type.schemas.buckets"
-            group="vis.aggs.bySchemaGroup.buckets"
-            group-name="'buckets'"
-            >
-          </vis-editor-agg-group>
-        </li>
+        <vis-editor-agg-group
+          ng-if="vis.type.schemas.buckets"
+          vis="vis"
+          saved-vis="savedVis"
+          schemas="vis.type.schemas.buckets"
+          group="vis.aggs.bySchemaGroup.buckets"
+          group-name="'buckets'"
+          >
+        </vis-editor-agg-group>
 
-        <!-- apply -->
-        <li class="sidebar-item">
+        <!-- apply/discard -->
+        <li ng-if="stateDirty" class="sidebar-item">
           <button
             type="submit"
-            ng-if="stateDirty"
             ng-disabled="httpActive.length || visualizeEditor.$invalid"
             class="sidebar-item-button success">
             Apply
+          </button>
+          <button
+            type="button"
+            ng-click="doReset()"
+            ng-disabled="visualizeEditor.$invalid"
+            class="sidebar-item-button warn">
+            Discard
           </button>
         </li>
       </ul>
