--- a/desktop/src/kibana/apps/new_visualize/editor/agg_group.html
+++ b/desktop/src/kibana/apps/new_visualize/editor/agg_group.html
@@ -1,47 +1,49 @@
-<div class="sidebar-item-title">
-  {{ groupName }}
-</div>
-
-<div class="vis-editor-agg-group" ng-class="groupName">
-  <!-- wrapper needed for nesting-indicator -->
-  <div ng-repeat="agg in group" class="vis-editor-agg-wrapper">
-    <nesting-indicator
-      ng-if="groupName === 'buckets'"
-      item="agg"
-      index="$index"
-      list="group">
-    </nesting-indicator>
-
-    <!-- agg.html -->
-    <vis-editor-agg
-      vis="vis"
-      saved-vis="savedVis"
-      group="group"
-      group-name="groupName"
-      group-min="stats.min"
-      $index="$index"
-      agg="agg">
-    </vis-editor-agg>
+<li class="sidebar-item">
+  <div class="sidebar-item-title">
+    {{ groupName }}
   </div>
 
-  <div ng-if="addForm.visible" class="vis-editor-agg-add-form form-group">
-    <label>Select {{ groupName }} type</label>
+  <div class="vis-editor-agg-group" ng-class="groupName">
+    <!-- wrapper needed for nesting-indicator -->
+    <div ng-repeat="agg in group" class="vis-editor-agg-wrapper">
+      <nesting-indicator
+        ng-if="groupName === 'buckets'"
+        item="agg"
+        index="$index"
+        list="group">
+      </nesting-indicator>
+
+      <!-- agg.html -->
+      <vis-editor-agg
+        vis="vis"
+        saved-vis="savedVis"
+        group="group"
+        group-name="groupName"
+        group-min="stats.min"
+        $index="$index"
+        agg="agg">
+      </vis-editor-agg>
+    </div>
+
+    <div ng-if="addForm.visible" class="vis-editor-agg-add-form form-group">
+      <label>Select {{ groupName }} type</label>
+      <button
+        ng-repeat="schema in availableSchema"
+        ng-click="createUsingSchema(schema)"
+        class="btn-default">
+        <i ng-show="schema.icon" ng-class="schema.icon"></i>
+        {{schema.title}}
+      </button>
+    </div>
+
     <button
-      ng-repeat="schema in availableSchema"
-      ng-click="createUsingSchema(schema)"
-      class="btn-default">
-      <i ng-show="schema.icon" ng-class="schema.icon"></i>
-      {{schema.title}}
+      ng-if="stats.count < stats.max"
+      type="button"
+      ng-click="addForm.visible = !addForm.visible"
+      class="vis-editor-agg-wide-btn btn btn-xs btn-default" >
+
+      <i ng-if="!addForm.visible" class="fa fa-plus"></i>
+      <span ng-if="addForm.visible">cancel</span>
     </button>
   </div>
-
-  <button
-    ng-if="stats.count < stats.max"
-    type="button"
-    ng-click="addForm.visible = !addForm.visible"
-    class="vis-editor-agg-wide-btn btn btn-xs btn-default" >
-
-    <i ng-if="!addForm.visible" class="fa fa-plus"></i>
-    <span ng-if="addForm.visible">cancel</span>
-  </button>
-</div>
+</li>
