--- a/desktop/src/kibana/apps/new_visualize/editor/editor.html
+++ b/desktop/src/kibana/apps/new_visualize/editor/editor.html
@@ -42,7 +42,17 @@
 
     <div class="button-group">
       <button ng-click="startOver()"><i class="fa fa-file-o"></i></button>
-      <button ng-click="toggleSave()"><i class="fa fa-save"></i></button>
+
+      <!-- normal save -->
+      <button ng-if="!editableVis.dirty" ng-click="toggleSave()">
+        <i class="fa fa-save"></i>
+      </button>
+
+      <!-- save stub with tooltip -->
+      <button disabled ng-if="editableVis.dirty" tooltip="Apply or Discard your changes before saving">
+        <i class="fa fa-save"></i>
+      </button>
+
       <button ng-click="toggleLoad()"><i class="fa fa-folder-open"></i></button>
       <button ng-click="toggleShare()"><i class="fa fa-code"></i></button>
       <button ng-click="fetch()"><i class="fa fa-refresh"></i></button>
