--- a/desktop/src/kibana/apps/new_visualize/editor/sidebar.html
+++ b/desktop/src/kibana/apps/new_visualize/editor/sidebar.html
@@ -1,6 +1,6 @@
 <div class="vis-editor-sidebar">
   <div class="sidebar-container">
-    <form class="sidebar-list" ng-submit="doApply()" name="visualizeEditor">
+    <form class="sidebar-list" ng-submit="apply()" name="visualizeEditor">
       <ul class="list-unstyled">
 
         <!-- metrics -->
@@ -26,7 +26,7 @@
         </vis-editor-agg-group>
 
         <!-- apply/discard -->
-        <li ng-if="stateDirty" class="sidebar-item">
+        <li ng-if="vis.dirty" class="sidebar-item">
           <button
             type="submit"
             ng-disabled="httpActive.length || visualizeEditor.$invalid"
@@ -35,7 +35,7 @@
           </button>
           <button
             type="button"
-            ng-click="doReset()"
+            ng-click="reset()"
             ng-disabled="visualizeEditor.$invalid"
             class="sidebar-item-button warn">
             Discard
