moved validation into the form

--- a/desktop/src/kibana/apps/new_visualize/editor/agg.html
+++ b/desktop/src/kibana/apps/new_visualize/editor/agg.html
@@ -64,6 +64,7 @@
         name="agg"
         class="form-control"
         ng-model="agg.type"
+        required
         ng-options="agg as agg.title for agg in aggTypeOptions">
       </select>
     </div>
