--- a/desktop/src/kibana/apps/new_visualize/editor/agg.html
+++ b/desktop/src/kibana/apps/new_visualize/editor/agg.html
@@ -1,4 +1,4 @@
-<div class="vis-editor-agg">
+<ng-form name="aggForm" class="vis-editor-agg">
 
   <!-- header -->
   <div class="vis-editor-agg-header">
@@ -14,13 +14,14 @@
     <!-- title -->
     <span class="vis-editor-agg-header-title">
       {{ agg.schema.title }}
-      <span ng-if="!editorOpen" class="vis-editor-agg-header-description">{{ makeDescription() }}</span>
+      <span ng-if="!editorOpen && aggForm.$valid" class="vis-editor-agg-header-description">{{ describe() }}</span>
+      <span ng-if="!editorOpen && aggForm.$invalid" class="vis-editor-agg-header-error">{{ describeError() }}</span>
     </span>
 
     <!-- controls !!!actually disabling buttons breaks tooltip¡¡¡ -->
     <div class="vis-editor-agg-header-controls btn-group">
       <button
-        ng-show="group.length > 1"
+        ng-if="group.length > 1"
         ng-class="{ disabled: $first }"
         ng-click="moveUp(agg)"
         tooltip="Increase Priority"
@@ -32,7 +33,7 @@
       </button>
 
       <button
-        ng-show="group.length > 1"
+        ng-if="group.length > 1"
         ng-class="{ disabled: $last }"
         ng-click="moveDown(agg)"
         tooltip="Decrease Priority"
@@ -69,4 +70,4 @@
       </select>
     </div>
   </div>
-</div>
+</ng-form>
