[discover] updated to use new Vis class

--- a/desktop/src/kibana/apps/discover/index.html
+++ b/desktop/src/kibana/apps/discover/index.html
@@ -86,7 +86,7 @@
             <div class="spinner large"> </div>
           </div>
 
-          <visualize vis="vis" es-resp="mergedEsResp"></visualize>
+          <visualize vis="vis" es-resp="mergedEsResp" search-source="searchSource"></visualize>
         </div>
 
         <div class="discover-table"
