--- a/desktop/src/kibana/apps/discover/index.html
+++ b/desktop/src/kibana/apps/discover/index.html
@@ -4,7 +4,8 @@
       <div class="typeahead" kbn-typeahead="discover">
         <div class="input-group"
           ng-class="discoverSearch.$invalid ? 'has-error' : ''">
-          <input query-input="searchSource" input-focus
+          <input query-input="searchSource"
+            input-focus
             kbn-typeahead-input
             ng-model="state.query"
             placeholder="Search..."
