Add configurable feature to shorten dot notated field display

--- a/desktop/test/unit/index.html
+++ b/desktop/test/unit/index.html
@@ -69,6 +69,7 @@
           'specs/filters/field_type',
           'specs/filters/uriescape',
           'specs/filters/moment',
+          'specs/filters/short_dots',
           'specs/filters/start_from',
           'specs/services/storage',
           'specs/services/persisted_log',
