--- a/desktop/test/unit/index.html
+++ b/desktop/test/unit/index.html
@@ -86,6 +86,7 @@
           'specs/vislib/zero_injection',
           'specs/vislib/labels',
           'specs/vislib/d3functions',
+          'specs/vislib/xAxis',
           'specs/utils/diff_time_picker_vals',
           'specs/factories/events',
           'specs/index_patterns/_flatten_search_response',
