--- a/desktop/test/unit/index.html
+++ b/desktop/test/unit/index.html
@@ -85,7 +85,8 @@
           'specs/factories/events',
           'specs/index_patterns/_flatten_search_response',
           'specs/utils/registry/index',
-          'specs/directives/filter_bar'
+          'specs/directives/filter_bar',
+          'specs/components/agg_types/index'
         ], function (kibana, sinon) {
           kibana.load(function () {
             var xhr = sinon.useFakeXMLHttpRequest();
