--- a/desktop/test/unit/index.html
+++ b/desktop/test/unit/index.html
@@ -75,6 +75,7 @@
           'specs/filters/start_from',
           'specs/services/storage',
           'specs/services/persisted_log',
+          'specs/services/url',
           'specs/utils/datemath',
           'specs/utils/interval',
           'specs/utils/versionmath',
