--- a/desktop/test/unit/index.html
+++ b/desktop/test/unit/index.html
@@ -86,8 +86,10 @@
           'specs/vislib/zero_injection',
           'specs/vislib/labels',
           'specs/vislib/d3functions',
-          'specs/vislib/data',
           'specs/vislib/xAxis',
+          'specs/vislib/yAxis',
+          'specs/vislib/axisTitle',
+          'specs/vislib/chartTitle',
           'specs/utils/diff_time_picker_vals',
           'specs/factories/events',
           'specs/index_patterns/_flatten_search_response',
