--- a/desktop/src/kibana/apps/settings/app.html
+++ b/desktop/src/kibana/apps/settings/app.html
@@ -2,8 +2,8 @@
   <nav class="navbar navbar-default navbar-static-top subnav">
     <div class="container-fluid">
       <ul class="nav navbar-nav">
-        <li ng-repeat="s in sections" ng-class="s.class">
-          <a class="navbar-link" ng-href="{{s.url}}">{{s.display}}</a>
+        <li ng-repeat="section in sections" ng-class="section.class">
+          <a class="navbar-link" ng-href="{{section.url}}">{{section.display}}</a>
         </li>
       </ul>
     </div>
