--- a/desktop/test/unit/index.html
+++ b/desktop/test/unit/index.html
@@ -81,6 +81,7 @@
           'specs/courier/search_source/_get_normalized_sort',
           'specs/factories/base_object',
           'specs/state_management/state',
+          'specs/state_management/global_state',
           'specs/utils/diff_object',
           'specs/utils/diff_time_picker_vals',
           'specs/factories/events',
