added some tests for the Data class and a couple of XAxis tests, will add more this weekend

--- a/desktop/test/unit/index.html
+++ b/desktop/test/unit/index.html
@@ -92,6 +92,7 @@
           'specs/vislib/yAxis',
           'specs/vislib/axisTitle',
           'specs/vislib/chartTitle',
+          'specs/vislib/data',
           'specs/utils/diff_time_picker_vals',
           'specs/factories/events',
           'specs/index_patterns/_flatten_search_response',
