--- a/desktop/test/unit/index.html
+++ b/desktop/test/unit/index.html
@@ -88,10 +88,14 @@
           'specs/vislib/zero_injection',
           'specs/vislib/labels',
           'specs/vislib/d3functions',
-          'specs/vislib/xAxis',
-          'specs/vislib/yAxis',
-          'specs/vislib/axisTitle',
-          'specs/vislib/chartTitle',
+          'specs/vislib/x_axis',
+          'specs/vislib/y_axis',
+          'specs/vislib/axis_title',
+          'specs/vislib/chart_title',
+          'specs/vislib/layout_types',
+          'specs/vislib/vis_types',
+          'specs/vislib/splits',
+          'specs/vislib/column_layout',
           'specs/utils/diff_time_picker_vals',
           'specs/factories/events',
           'specs/index_patterns/_flatten_search_response',
