--- a/desktop/test/unit/index.html
+++ b/desktop/test/unit/index.html
@@ -95,6 +95,7 @@
           'specs/vislib/layout_types',
           'specs/vislib/vis_types',
           'specs/vislib/splits',
+          'specs/vislib/layout',
           'specs/vislib/column_layout',
           'specs/utils/diff_time_picker_vals',
           'specs/factories/events',
