--- a/desktop/test/unit/index.html
+++ b/desktop/test/unit/index.html
@@ -87,7 +87,6 @@
           'specs/vislib/color',
           'specs/vislib/zero_injection',
           'specs/vislib/labels',
-          'specs/vislib/d3functions',
           'specs/vislib/x_axis',
           'specs/vislib/y_axis',
           'specs/vislib/axis_title',
@@ -96,6 +95,7 @@
           'specs/vislib/vis_types',
           'specs/vislib/splits',
           'specs/vislib/layout',
+          'specs/vislib/_chart',
           'specs/vislib/column_layout',
           'specs/utils/diff_time_picker_vals',
           'specs/factories/events',
