--- a/desktop/test/unit/index.html
+++ b/desktop/test/unit/index.html
@@ -97,6 +97,7 @@
           'specs/vislib/layout',
           'specs/vislib/_chart',
           'specs/vislib/column_layout',
+          'specs/vislib/index',
           'specs/utils/diff_time_picker_vals',
           'specs/factories/events',
           'specs/index_patterns/_flatten_search_response',
