adding vis and handler tests

--- a/desktop/test/unit/index.html
+++ b/desktop/test/unit/index.html
@@ -98,6 +98,8 @@
           'specs/vislib/_chart',
           'specs/vislib/column_layout',
           'specs/vislib/index',
+          'specs/vislib/vis',
+          'specs/vislib/handler',
           'specs/utils/diff_time_picker_vals',
           'specs/factories/events',
           'specs/index_patterns/_flatten_search_response',
