--- a/desktop/test/unit/index.html
+++ b/desktop/test/unit/index.html
@@ -100,6 +100,7 @@
           'specs/vislib/index',
           'specs/vislib/vis',
           'specs/vislib/handler',
+          'specs/vislib/_error_handler',
           'specs/utils/diff_time_picker_vals',
           'specs/factories/events',
           'specs/index_patterns/_flatten_search_response',
