--- a/desktop/test/unit/index.html
+++ b/desktop/test/unit/index.html
@@ -88,7 +88,8 @@
           'specs/index_patterns/_flatten_search_response',
           'specs/utils/registry/index',
           'specs/directives/filter_bar',
-          'specs/components/agg_types/index'
+          'specs/components/agg_types/index',
+          'specs/components/vis/index'
         ], function (kibana, sinon) {
           kibana.load(function () {
             var xhr = sinon.useFakeXMLHttpRequest();
