add tests for the rison filters

--- a/desktop/test/unit/index.html
+++ b/desktop/test/unit/index.html
@@ -71,6 +71,7 @@
           'specs/filters/field_type',
           'specs/filters/uriescape',
           'specs/filters/moment',
+          'specs/filters/rison',
           'specs/filters/short_dots',
           'specs/filters/start_from',
           'specs/services/storage',
