Complete table tests

--- a/desktop/test/unit/index.html
+++ b/desktop/test/unit/index.html
@@ -61,6 +61,7 @@
           'kibana',
           'sinon/sinon',
           'specs/apps/discover/hit_sort_fn',
+          'specs/apps/discover/directives/table',
           'specs/directives/confirm-click',
           'specs/directives/timepicker',
           'specs/directives/truncate',
