Added new resizeChecker, and tests

--- a/desktop/test/unit/index.html
+++ b/desktop/test/unit/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Kibana4 Tests</title>
     <link rel="stylesheet" href="/node_modules/mocha/mocha.css" />
-    <script src="/node_modules/expect.js/expect.js"></script>
+    <script src="/node_modules/expect.js/index.js"></script>
     <script src="/node_modules/mocha/mocha.js"></script>
     <script src="/src/bower_components/requirejs/require.js"></script>
     <script src="/src/kibana/require.config.js"></script>
@@ -79,6 +79,7 @@
           'specs/utils/interval',
           'specs/utils/versionmath',
           'specs/utils/routes/index',
+          'specs/utils/sequencer',
           'specs/courier/search_source/_get_normalized_sort',
           'specs/factories/base_object',
           'specs/state_management/state',
@@ -103,13 +104,15 @@
           'specs/vislib/handler',
           'specs/vislib/_error_handler',
           'specs/vislib/data',
+          'specs/vislib/resize_checker',
           'specs/utils/diff_time_picker_vals',
           'specs/factories/events',
           'specs/index_patterns/_flatten_search_response',
           'specs/utils/registry/index',
           'specs/directives/filter_bar',
           'specs/components/agg_types/index',
-          'specs/components/vis/index'
+          'specs/components/vis/index',
+          'specs/components/reflow_watcher'
         ], function (kibana, sinon) {
           kibana.load(function () {
             var xhr = sinon.useFakeXMLHttpRequest();
