--- a/desktop/src/kibana/apps/discover/index.html
+++ b/desktop/src/kibana/apps/discover/index.html
@@ -44,7 +44,7 @@
           refresh="refreshFieldList"
           data="rows"
           filter="filterQuery"
-          search-source="searchSource"
+          index-pattern="searchSource.get('index')"
           state="state">
         </disc-field-chooser>
       </div>
