--- a/desktop/test/unit/index.html
+++ b/desktop/test/unit/index.html
@@ -69,6 +69,7 @@
           'sinon/sinon',
           'specs/apps/discover/hit_sort_fn',
           'specs/apps/discover/directives/table',
+          'specs/apps/discover/directives/field_chooser',
           'specs/apps/discover/segmented_fetch',
           'specs/directives/confirm-click',
           'specs/directives/timepicker',
