--- a/desktop/src/kibana/apps/dashboard/index.html
+++ b/desktop/src/kibana/apps/dashboard/index.html
@@ -41,5 +41,10 @@
 
   <config config-template="configTemplate" config-object="opts"></config>
 
+  <div ng-show="!state.panels.length" class="text-center start-screen">
+    <h2>Ready to get started?</h2>
+    <p>Click the <i class="fa fa-plus" ng-click="openAdd()"></i> button in the menu bar above to add a visualization to the dashboard. <br/>If you haven't setup a visualization yet visit the <a href="#/visualize">"Visualize"</a> tab to create your first visualization.</p>
+  </div>
+
   <dashboard-grid></dashboard-grid>
 </div>
