on travis, use grunt-saucelabs rather than phantomjs

--- a/desktop/test/unit/index.html
+++ b/desktop/test/unit/index.html
@@ -123,8 +123,42 @@
 
             window.mochaRunner = mocha.run().on('end', function () {
               window.mochaResults = this.stats;
+              window.mochaResults.details = getFailedTests(this);
               xhr.restore();
             });
+
+            function getFailedTests(runner) {
+              var fails = [];
+              var suiteStack = [];
+
+              (function recurse(suite) {
+                suiteStack.push(suite);
+
+                (suite.tests || [])
+                .filter(function (test) {
+                  return test.state === 'failed';
+                })
+                .forEach(function (test) {
+                  fails.push({
+                    title: suiteStack.reduce(function (title, suite) {
+                      if (suite.title) {
+                        return (title ? title + ' ' : '') + suite.title;
+                      } else {
+                        return title;
+                      }
+                    }, ''),
+                    err: test.err ? (test.err.stack || test.err.message) : 'unknown error'
+                  });
+                });
+
+                (suite.suites || []).forEach(recurse);
+
+                suiteStack.pop();
+              }(runner.suite));
+
+              return fails;
+            }
+
           });
         });
       }
