--- a/desktop/src/kibana/apps/visualize/editor/panels/save.html
+++ b/desktop/src/kibana/apps/visualize/editor/panels/save.html
@@ -1,7 +1,7 @@
 <form role="form" ng-submit="conf.doSave()">
   <div class="form-group">
     <label for="visTitle">Title</label>
-    <input class="form-control" type="text" name="visTitle" ng-model="conf.savedVis.title" required>
+    <input class="form-control" input-focus type="text" name="visTitle" ng-model="conf.savedVis.title" required>
   </div>
   <div class="form-group">
     <label for="visDescription">Description</label>
