--- a/desktop/src/kibana/apps/visualize/editor/editor.html
+++ b/desktop/src/kibana/apps/visualize/editor/editor.html
@@ -69,6 +69,7 @@
     config-object="conf">
   </config>
 
+  <filter-bar state="state"></filter-bar>
 
   <div class="vis-editor-content">
     <vis-editor-sidebar
