hide reset button instead of disabling it

--- a/desktop/src/kibana/apps/settings/sections/advanced/index.html
+++ b/desktop/src/kibana/apps/settings/sections/advanced/index.html
@@ -72,7 +72,7 @@
             <button
               ng-if="!conf.editting"
               ng-click="clear(conf)"
-              ng-disabled="conf.value === undefined"
+              ng-hide="conf.value === undefined"
               class="btn btn-danger">
               <i class="fa fa-trash-o"></i>
             </button>
