--- a/desktop/src/kibana/apps/settings/sections/objects/_objects.html
+++ b/desktop/src/kibana/apps/settings/sections/objects/_objects.html
@@ -27,13 +27,17 @@
         <ul class="list-unstyled">
           <li ng-repeat="item in service.data">
             <div class="pull-right">
-              <a href="{{ item.url }}" class="btn-success btn btn-xs">View</a>
-              &nbsp;
-              <a
-                href="#/settings/objects/{{service.service | uriescape}}/{{item.id | uriescape}}"
-                class="btn-primary btn btn-xs" >
-                Edit
-              </a>
+              <button
+                ng-click="edit(service, item)"
+                class="btn btn-default">
+                <i class="fa fa-pencil"></i>
+              </button>
+
+              <button
+                ng-click="open(item)"
+                class="btn btn-info">
+                <i class="fa fa-eye"></i>
+              </button>
             </div>
             <div class="pull-left">
               <input
