--- a/desktop/src/kibana/apps/settings/sections/objects/_view.html
+++ b/desktop/src/kibana/apps/settings/sections/objects/_view.html
@@ -1,7 +1,7 @@
 <kbn-settings-app section="objects">
   <kbn-settings-objects-view class="container">
     <div class="pull-right" style="margin-top: 20px;">
-      <a href="{{ link }}" class="btn btn-success">View {{ title }}</a>
+      <a href="{{ link }}" class="btn btn-primary">View {{ title }}</a>
       <a confirm-click="delete()" class="btn btn-danger"><i class="fa fa-trash-o"></i> Delete {{ title }} Object</a>
     </div>
     <h1>Edit {{ title }} Object</h1>
@@ -18,9 +18,10 @@
         <input ng-if="field.type === 'number'"  type="number" ng-model="field.value" class="form-control span12"/>
         <div ng-if="field.type === 'json' || field.type === 'array'" ui-ace="{ onLoad: aceLoaded, mode: 'json' }" id="{{field.name}}" ng-model="field.value" class="form-control"></div>
       </div>
-      <div class="form-group">
-        <button class="btn btn-primary" ng-disabled="objectForm.$invalid || aceInvalidEditors.length !==0">Save {{ title }} Object</button>
-      </div>
     </form>
+    <div class="form-group">
+      <button class="btn btn-primary" ng-click="cancel()">Cancel</button>
+      <button class="btn btn-success" ng-click="submit()" ng-disabled="objectForm.$invalid || aceInvalidEditors.length !==0">Save {{ title }} Object</button>
+    </div>
   </kbn-settings-objects-view>
 </kbn-settings-app>
