Disable 'Create' button if no indices are found. Closes #330

--- a/desktop/src/kibana/apps/settings/sections/indices/_create.html
+++ b/desktop/src/kibana/apps/settings/sections/indices/_create.html
@@ -111,10 +111,10 @@
           </div>
 
           <button
-            ng-disabled="form.$invalid"
+            ng-disabled="form.$invalid || index.fetchFieldsError"
             type="submit"
             class="btn btn-success">
-            Create
+            {{index.fetchFieldsError ? "No indices found" : "Create" }}
           </button>
         </form>
       </div>
