Revert "Removing the filter-bar feature till after beta"
This reverts commit 840102b4b217b083bf11bf95655aae58827330dd.

--- a/desktop/src/kibana/apps/visualize/editor/editor.html
+++ b/desktop/src/kibana/apps/visualize/editor/editor.html
@@ -69,7 +69,7 @@
     config-object="conf">
   </config>
 
-  <!-- <filter-bar state="state"></filter-bar> -->
+  <filter-bar state="state"></filter-bar>
 
   <div class="vis-editor-content">
     <vis-editor-sidebar
