[discover] truncate using height, not character length. fixes #376

--- a/desktop/src/kibana/index.html
+++ b/desktop/src/kibana/index.html
@@ -67,5 +67,13 @@
 
       <div class="application" ng-view></div>
     </div>
+    <style-compile>
+      .truncate-by-height {
+        max-height: {{ truncateMaxHeight }};
+      }
+      .truncate-by-height::before {
+        top: {{ truncateGradientTop }};
+      }
+    </style-compile>
   </body>
 </html>
