--- a/desktop/src/kibana/apps/visualize/wizard/step_2.html
+++ b/desktop/src/kibana/apps/visualize/wizard/step_2.html
@@ -3,8 +3,8 @@
   <span class="pull-right label label-default">Step 2</span>
 </h1>
 
-<ul class="list-group list-group-menu">
-  <a class="list-group-item list-group-menu-item"
+<ul class="visualizations list-group list-group-menu">
+  <a class="visualization list-group-item list-group-menu-item"
   	ng-repeat="type in visTypes"
   	ng-href="{{ visTypeUrl(type) }}">
     <li>
