Change chart selection to use type.title, closes #379

--- a/desktop/src/kibana/apps/visualize/wizard/step_2.html
+++ b/desktop/src/kibana/apps/visualize/wizard/step_2.html
@@ -8,7 +8,7 @@
   	ng-repeat="type in visTypes"
   	ng-href="{{ visTypeUrl(type) }}">
     <li>
-      <i ng-class="type.icon"></i>{{type.name}}
+      <i ng-class="type.icon"></i>{{type.title}}
     </li>
   </a>
 </ul>
