use new file icon in applications

--- a/desktop/src/kibana/apps/visualize/editor/editor.html
+++ b/desktop/src/kibana/apps/visualize/editor/editor.html
@@ -44,7 +44,7 @@
     </div>
 
     <div class="button-group">
-      <button ng-click="startOver()"><i class="fa fa-file-o"></i></button>
+      <button ng-click="startOver()"><i class="fa fa-file-new-o"></i></button>
 
       <!-- normal save -->
       <button ng-if="!editableVis.dirty" ng-click="toggleSave()">
