--- a/desktop/src/kibana/apps/dashboard/index.html
+++ b/desktop/src/kibana/apps/dashboard/index.html
@@ -30,10 +30,10 @@
       </form>
 
       <div class="button-group">
-        <button ng-click="newDashboard()"><i class="fa fa-file-o"></i></button>
-        <button ng-click="openAdd()"><i class="fa fa-plus"></i></button>
+        <button ng-click="newDashboard()"><i class="fa fa-file-new-o"></i></button>
         <button ng-click="openSave()"><i class="fa fa-save"></i></button>
         <button ng-click="openLoad()"><i class="fa fa-folder-open"></i></button>
+        <button ng-click="openAdd()"><i class="fa fa-plus"></i></button>
         <button ng-click="openShare()"><i class="fa fa-code"></i></button>
       </div>
     </navbar>
