change share icon, move add vis to dashboard, change add vis icon

--- a/desktop/src/kibana/apps/visualize/editor/editor.html
+++ b/desktop/src/kibana/apps/visualize/editor/editor.html
@@ -57,7 +57,7 @@
       </button>
 
       <button ng-click="toggleLoad()"><i class="fa fa-folder-open"></i></button>
-      <button ng-click="toggleShare()"><i class="fa fa-code"></i></button>
+      <button ng-click="toggleShare()"><i class="fa fa-external-link"></i></button>
       <button ng-click="fetch()"><i class="fa fa-refresh"></i></button>
     </div>
   </navbar>
