use folder outline icon - matches other icons better

--- a/desktop/src/kibana/apps/visualize/editor/editor.html
+++ b/desktop/src/kibana/apps/visualize/editor/editor.html
@@ -56,7 +56,7 @@
         <i class="fa fa-save"></i>
       </button>
 
-      <button ng-click="toggleLoad()"><i class="fa fa-folder-open"></i></button>
+      <button ng-click="toggleLoad()"><i class="fa fa-folder-open-o"></i></button>
       <button ng-click="toggleShare()"><i class="fa fa-external-link"></i></button>
       <button ng-click="fetch()"><i class="fa fa-refresh"></i></button>
     </div>
