--- a/desktop/src/kibana/apps/dashboard/index.html
+++ b/desktop/src/kibana/apps/dashboard/index.html
@@ -32,7 +32,7 @@
       <div class="button-group">
         <button ng-click="newDashboard()"><i class="fa fa-file-new-o"></i></button>
         <button ng-click="openSave()"><i class="fa fa-save"></i></button>
-        <button ng-click="openLoad()"><i class="fa fa-folder-open"></i></button>
+        <button ng-click="openLoad()"><i class="fa fa-folder-open-o"></i></button>
         <button ng-click="openShare()"><i class="fa fa-external-link"></i></button>
         <button ng-click="openAdd()"><i class="fa fa-plus-circle"></i></button>
       </div>
