Add descriptions of all advanced settings. Add informational text about object viewer. Closes #373

--- a/desktop/src/kibana/apps/settings/sections/advanced/index.html
+++ b/desktop/src/kibana/apps/settings/sections/advanced/index.html
@@ -19,7 +19,10 @@
       </thead>
       <tbody>
         <tr ng-repeat="conf in configs | filter:advancedFilter" ng-class="conf.value === undefined ? 'default' : 'custom'">
-          <td class="name">{{conf.name}}</td>
+          <td class="name">
+            <b>{{conf.name}}</b><br>
+            <span class="smaller">{{conf.description}}</span>
+          </td>
           <td class="value">
             <form
               ng-if="conf.editting"
