--- a/desktop/src/kibana/apps/settings/sections/objects/_view.html
+++ b/desktop/src/kibana/apps/settings/sections/objects/_view.html
@@ -6,9 +6,8 @@
     </div>
     <h1>Edit {{ title }} Object</h1>
     <div class="bs-callout bs-callout-warning">
-      <h4>Caution: You can break stuff here</h4>
-      Be careful in here, these setting are for very advanced users only. Tweaks you make here can break large poritions of Kibana.
-      Some of these settings may be undocumented, unsupported or experimental. Seriously, if you thought the "Advance" tab was dangerous this is even more extreme!
+      <h4>Proceed with caution</h4>
+      Modifying objects is for advanced users only. Object properties are not validated and invalid objects could cause errors, data loss, or worse. Unless someone with intimate knowledge of the code told you to be in here, you probably shouldn't be.
     </div>
     </div>
     <form name="objectForm" ng-submit="submit()">
