--- a/desktop/src/kibana/apps/settings/sections/objects/_objects.html
+++ b/desktop/src/kibana/apps/settings/sections/objects/_objects.html
@@ -1,11 +1,9 @@
 <kbn-settings-app section="objects">
   <kbn-settings-objects class="container">
     <h2>Edit Saved Objects</h2>
-    <div class="bs-callout bs-callout-warning">
-      <h4>Caution: You can break stuff here</h4>
-      Be careful in here, these setting are for very advanced users only. Tweaks you make here can break large poritions of Kibana.
-      Some of these settings may be undocumented, unsupported or experimental. Seriously, if you thought the "Advance" tab was dangerous this is even more extreme!
-    </div>
+    <p>
+      From here you can delete saved objects, such as saved searches. You can also edit the raw data of saved objects. Typically objects are only modified via their associated application, which is probably what you should use instead of this screen.
+    </p>
     <form>
       <input ng-model="advancedFilter" class="form-control span12" type="text" placeholder="Filter"/>
     </form>
