[vis/editor] write the query to state, and to the searchSource

--- a/desktop/src/kibana/apps/visualize/editor/editor.html
+++ b/desktop/src/kibana/apps/visualize/editor/editor.html
@@ -24,13 +24,13 @@
           <div class="input-group"
             ng-class="queryInput.$invalid ? 'has-error' : ''">
             <input
+              ng-model="state.query"
               query-input="savedVis.searchSource"
               input-focus
               kbn-typeahead-input
               placeholder="Search..."
               type="text"
-              class="form-control"
-              ng-model="state.query">
+              class="form-control">
 
             <button
               class="btn btn-default" type="submit"
