--- a/desktop/src/kibana/apps/settings/sections/objects/_objects.html
+++ b/desktop/src/kibana/apps/settings/sections/objects/_objects.html
@@ -10,7 +10,7 @@
 
     <ul class="nav nav-tabs">
       <li class="kbn-settings-tab" ng-class="{ active: state.tab === service.title }" ng-repeat="service in services">
-        <a ng-click="changeTab(service)">{{ service.title }} <small>({{service.hits}})</small></a>
+        <a ng-click="changeTab(service)">{{ service.title }} <small>({{service.data.length}})</small></a>
       </li>
     </ul>
     <div class="tab-content">
