--- a/desktop/test/unit/index.html
+++ b/desktop/test/unit/index.html
@@ -24,6 +24,7 @@
           config: '/config',
           test_utils: '../../test/utils',
           fixtures: '../../test/unit/fixtures',
+          vislib_fixtures: '../../test/unit/specs/vislib/fixture',
           specs: '../../test/unit/specs',
           sinon: '../../test/utils/sinon',
           bluebird: 'bower_components/bluebird/js/browser/bluebird',
