move html escape into a util

--- a/desktop/test/unit/index.html
+++ b/desktop/test/unit/index.html
@@ -102,6 +102,7 @@
           'specs/utils/versionmath',
           'specs/utils/routes/index',
           'specs/utils/sequencer',
+          'specs/utils/html_escape',
           'specs/courier/search_source/_get_normalized_sort',
           'specs/factories/base_object',
           'specs/state_management/state',
